added flex-layout for the header toolbar to work properly.

--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,1 +1,7 @@
-<p>product works!</p>
+<div class="wrapper">
+    <div class="content">
+        <div class="searchbar">
+            <app-search-bar></app-search-bar>
+        </div>
+    </div>
+</div>
