--- a/src/app/shared/search-bar/search-bar.component.html
+++ b/src/app/shared/search-bar/search-bar.component.html
@@ -1,5 +1,5 @@
 <form class="example-form">
-    <mat-form-field class="example-full-width">
+    <mat-form-field class="search-bar">
         <input type="text" placeholder="Pick one" aria-label="Number" matInput [formControl]="myControl"
             [matAutocomplete]="auto">
         <mat-autocomplete #auto="matAutocomplete">
