--- a/src/app/components/landing-search/landing-search.component.html
+++ b/src/app/components/landing-search/landing-search.component.html
@@ -1,1 +1,7 @@
-<p>landing-search works!</p>
+<div class="wrapper">
+    <div class="content">
+
+        <app-search-bar></app-search-bar>
+
+    </div>
+</div>
