--- a/src/app/layouts/default/default.component.html
+++ b/src/app/layouts/default/default.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
-
-<router-outlet></router-outlet>
-
+<mat-drawer-container>
+    <router-outlet></router-outlet>
+</mat-drawer-container>
 
 <app-footer></app-footer>
