--- a/src/app/components/landing-search/landing-search.component.scss
+++ b/src/app/components/landing-search/landing-search.component.scss
@@ -1,5 +1,5 @@
 :host {
-    height: 100%
+    height: 100%;
 }
 
 .wrapper{
@@ -11,7 +11,7 @@
 
 
 .content{
-    background-image: url('/src/assets/images/background-main.jpg');
+    
     
     position: fixed;
     top: 50%;
