background image on landing implemented, need positioning bit better.

--- a/src/app/components/landing-search/landing-search.component.html
+++ b/src/app/components/landing-search/landing-search.component.html
@@ -1,7 +1,12 @@
 <div class="wrapper">
-    <div class="content">
+    <div calss="bg">
+        <div class="content">
 
-        <app-search-bar></app-search-bar>
+            <div class="search">
 
+                <app-search-bar></app-search-bar>
+
+            </div>
+        </div>
     </div>
 </div>
