--- a/src/app/components/landing-search/landing-search.component.scss
+++ b/src/app/components/landing-search/landing-search.component.scss
@@ -6,13 +6,25 @@
     
     text-align: center;
     
+    background-image: url('src/assets/images/background-main.jpg');
+    background-size: cover;
+    height: 100%; 
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+    
     
 }
 
 
-.content{
+
+
+.search{
     
-    
+   
+
     position: fixed;
     top: 50%;
     left: 50%;
