--- a/src/app/shared/search-bar/search-bar.component.scss
+++ b/src/app/shared/search-bar/search-bar.component.scss
@@ -1,4 +1,13 @@
 .search-bar{
-    border-radius: 3px 3px 3px 3px;
+    border-radius: 50px 50px 50px 50px;
     width: 60%;   
+    background-color: white;
+  
 }
+
+
+
+mat-form-field.mat-form-field {
+    font-size: 16px;    
+  }
+
