--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,1 +1,24 @@
-<p>login works!</p>
+<div>
+    <mat-card>
+        <form #loginForm="ngForm">
+            <mat-form-field>
+                <input matInput name="email" ngModel type="email" placeholder="Email" #emailInput="ngModel" required
+                    email />
+                <mat-error *ngIf="emailInput.invalid">Please enter a valid email.</mat-error>
+            </mat-form-field>
+            <br />
+            <mat-form-field>
+                <input matInput name="password" ngModel type="password" placeholder="Password" #passwordInput="ngModel"
+                    required password />
+                <mat-error *ngIf="passwordInput.invalid">Please enter a valid password.</mat-error>
+            </mat-form-field>
+            <br />
+            <button class="loginButton" mat-raised-button color="primary" type="submit">
+                Login
+            </button>
+        </form>
+        <mat-card-actions>
+            <button mat-button routerLink="/register">Register</button>
+        </mat-card-actions>
+    </mat-card>
+</div>
