--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -1,27 +1,29 @@
 mat-card {
     margin: 10% 30% auto;
-    width: 40%;
     height: auto;
   }
   
   mat-form-field {
-    margin-left: 10%;
     width: 80%;
   }
   
   mat-card-actions {
-    margin-left: 10%;
     width: 100%;
   }
   
   button {
     width: 80%;
-    margin-left: 10%;
+   
   }
-  
-  .loginButton{
-      background-color: none;
 
-  }
  
+
+  .wrapper{
+    text-align: center;
+  }
+
+  .content{
+    width: auto;
+    display: block;
+  }
   
