--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,4 +1,5 @@
-<mat-divider></mat-divider>
 <footer>
-    &copy; All rights Reserved
+    <div class="content">
+        &copy; All rights Reserved
+    </div>
 </footer>
