testing a spinner in default component

--- a/src/app/layouts/default/default.component.html
+++ b/src/app/layouts/default/default.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
 <mat-drawer-container>
+    <mat-spinner *ngIf="isLoading"></mat-spinner>
     <router-outlet></router-outlet>
 </mat-drawer-container>
 
