created auth routing module for lazy loading of login components.
sorted routes to point to /auth/login /auth/registration from the header, login and registration forms.

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -18,7 +18,7 @@
                     Login
                 </button>
 
-                <button mat-button routerLink="/register">
+                <button mat-button routerLink="/auth/register">
                     Register
                 </button>
 
