--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -29,7 +29,7 @@
             </button>
         </form>
         <mat-card-actions>
-            <button mat-button routerLink="/login">Back</button>
+            <button mat-button routerLink="/auth/login">Back</button>
         </mat-card-actions>
     </mat-card>
 </div>
