--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -22,7 +22,7 @@
                         <mat-icon>person_outline</mat-icon>
                     </button>
                     <mat-menu #menu="matMenu">
-                        <button mat-menu-item routerLink="/login">
+                        <button mat-menu-item routerLink="/auth/login">
                             <mat-icon>exit_to_app</mat-icon>
                             Login
                         </button>
