--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,5 +1,7 @@
 <footer>
     <div class="content">
         &copy; All rights Reserved
+        <span style="float:right; cursor: pointer;" routerLink="/auth/register-vendor">Vendor Registration</span>
+
     </div>
 </footer>
