changed over positioning of login & registration cards to be done programatically.

--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -1,6 +1,10 @@
 mat-card {
-    margin: 10% 30% auto;
-    height: auto;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  width: 40%;
   }
   
   mat-form-field {
