more style changes to bring auth components to same point

--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -24,12 +24,11 @@
                 <mat-error *ngIf="password2Input.invalid">Please enter a valid password.</mat-error>
             </mat-form-field>
             <br />
-            <button mat-raised-button color="primary" type="submit">
+            <button style="margin-bottom: 0.5em;" mat-raised-button color="primary" type="submit">
                 Submit
             </button>
-        </form>
-        <mat-card-actions>
             <button mat-button routerLink="/auth/login">Back</button>
-        </mat-card-actions>
+        </form>
+
     </mat-card>
 </div>
