--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -1,5 +1,5 @@
 mat-card {
-  
+  position: fixed;
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
@@ -11,9 +11,7 @@ mat-card {
     width: 80%;
   }
   
-  mat-card-actions {
-    width: 100%;
-  }
+
   
   button {
     width: 80%;
