--- a/src/app/auth/vendor-registration/vendor-registration.component.html
+++ b/src/app/auth/vendor-registration/vendor-registration.component.html
@@ -1,34 +1,116 @@
 <div>
-    <mat-card>
-        <form #loginForm="ngForm">
-            <mat-form-field>
-                <input matInput name="name" ngModel placeholder="Name" #nameInput="ngModel" required />
-                <mat-error *ngIf="nameInput.invalid">Please enter your name</mat-error>
-            </mat-form-field>
-            <br />
-            <mat-form-field>
-                <input matInput name="email" ngModel type="email" placeholder="Email" #emailInput="ngModel" required
-                    email />
-                <mat-error *ngIf="emailInput.invalid">Please enter a valid email.</mat-error>
-            </mat-form-field>
-            <br />
-            <mat-form-field>
-                <input matInput name="password" ngModel type="password" placeholder="Password" #passwordInput="ngModel"
-                    required password />
-                <mat-error *ngIf="passwordInput.invalid">Please enter a valid password.</mat-error>
-            </mat-form-field>
-            <br />
-            <mat-form-field>
-                <input matInput name="password2" ngModel type="password2" placeholder="Password"
-                    #password2Input="ngModel" required password2 />
-                <mat-error *ngIf="password2Input.invalid">Please enter a valid password.</mat-error>
-            </mat-form-field>
-            <br />
-            <button style="margin-bottom: 0.5em;" mat-raised-button color="primary" type="submit">
-                Submit
-            </button>
-            <button mat-button routerLink="/">Back</button>
-        </form>
+  <mat-card>
+    <form #loginForm="ngForm">
+      <mat-form-field>
+        <input
+          matInput
+          name="name"
+          ngModel
+          placeholder="Name"
+          #nameInput="ngModel"
+          required
+        />
+        <mat-error *ngIf="nameInput.invalid">Please enter your name</mat-error>
+      </mat-form-field>
+      <br />
+      <mat-form-field>
+        <input
+          matInput
+          name="CompanyName"
+          ngModel
+          placeholder="Company Name"
+          #nameInput="ngModel"
+          required
+        />
+        <mat-error *ngIf="nameInput.invalid"
+          >Please enter the business name</mat-error
+        >
+      </mat-form-field>
+      <br />
+      <mat-form-field>
+        <input
+          matInput
+          name="CompanyAddress"
+          ngModel
+          placeholder="Company Address"
+          #nameInput="ngModel"
+          required
+        />
+        <mat-error *ngIf="nameInput.invalid"
+          >Please enter the business name</mat-error
+        >
+      </mat-form-field>
+      <br />
+      <mat-form-field>
+        <input
+          matInput
+          name="CompanyPostcode"
+          ngModel
+          placeholder="Company Postcode"
+          #nameInput="ngModel"
+          required
+        />
+        <mat-error *ngIf="nameInput.invalid"
+          >Please enter the business name</mat-error
+        >
+      </mat-form-field>
+      <br />
+      <mat-form-field>
+        <input
+          matInput
+          name="CompanyContact"
+          ngModel
+          placeholder="Company Contact Number"
+          #nameInput="ngModel"
+          required
+        />
+        <mat-error *ngIf="nameInput.invalid"
+          >Please enter the business name</mat-error
+        >
+      </mat-form-field>
+      <br />
+      <mat-form-field>
+        <input
+          matInput
+          name="email"
+          ngModel
+          type="email"
+          placeholder="Email"
+          #emailInput="ngModel"
+          required
+          email
+        />
+        <mat-error *ngIf="emailInput.invalid"
+          >Please enter a valid email.</mat-error
+        >
+      </mat-form-field>
+      <br />
+      <mat-form-field>
+        <input
+          matInput
+          name="password"
+          ngModel
+          type="password"
+          placeholder="Password"
+          #passwordInput="ngModel"
+          required
+          password
+        />
+        <mat-error *ngIf="passwordInput.invalid"
+          >Please enter a valid password.</mat-error
+        >
+      </mat-form-field>
 
-    </mat-card>
+      <br />
+      <button
+        style="margin-bottom: 0.5em;"
+        mat-raised-button
+        color="primary"
+        type="submit"
+      >
+        Submit
+      </button>
+      <button mat-button routerLink="/">Back</button>
+    </form>
+  </mat-card>
 </div>
