--- a/src/app/auth/vendor-registration/vendor-registration.component.html
+++ b/src/app/auth/vendor-registration/vendor-registration.component.html
@@ -1,6 +1,9 @@
 <div>
   <mat-card>
-    <form #loginForm="ngForm">
+    <form
+      (submit)="onVendorRegister(vendorregisterForm)"
+      #vendorregisterForm="ngForm"
+    >
       <mat-form-field>
         <input
           matInput
@@ -21,6 +24,7 @@
           placeholder="Company Name"
           #nameInput="ngModel"
           required
+          CompanyName
         />
         <mat-error *ngIf="nameInput.invalid"
           >Please enter the business name</mat-error
@@ -35,6 +39,7 @@
           placeholder="Company Address"
           #nameInput="ngModel"
           required
+          CompanyAddress
         />
         <mat-error *ngIf="nameInput.invalid"
           >Please enter the business name</mat-error
@@ -49,6 +54,7 @@
           placeholder="Company Postcode"
           #nameInput="ngModel"
           required
+          CompanyPostcode
         />
         <mat-error *ngIf="nameInput.invalid"
           >Please enter the business name</mat-error
@@ -63,6 +69,7 @@
           placeholder="Company Contact Number"
           #nameInput="ngModel"
           required
+          CompanyContact
         />
         <mat-error *ngIf="nameInput.invalid"
           >Please enter the business name</mat-error
