--- a/src/app/auth/vendor-registration/vendor-registration.component.scss
+++ b/src/app/auth/vendor-registration/vendor-registration.component.scss
@@ -1,11 +1,6 @@
-mat-card {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  width: 40%;
-  }
+/**
+
+
   
   mat-form-field {
     margin-left: 10%;
@@ -18,6 +13,24 @@ mat-card {
     width: 80%;
     margin-left: 10%;
   }
-  
- 
-  
+  **/
+
+.wrapper {
+  text-align: center;
+
+  background-image: url("src/assets/images/store2.jpg");
+  background-size: cover;
+  height: 50%;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.content {
+  width: auto;
+  display: block;
+}
+mat-card {
+  margin: auto;
+  width: 28%;
+}
