--- a/src/app/auth/register/register.component.scss
+++ b/src/app/auth/register/register.component.scss
@@ -4,10 +4,11 @@
 
 .content {
   width: auto;
+  margin-top: 3%;
   display: block;
 }
 mat-card {
-  margin: 5% auto;
+  margin: auto;
   width: 40%;
 }
 mat-form-field {
