--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -1,32 +1,29 @@
-@media screen and (max-width: 414px) {
-  .content {
-    height: 100%;
-    padding-top: 30% !important;
-  }
-}
-
+//center everything
 .wrapper {
   text-align: center;
+}
+//bacground image and styling
+.bg {
   background-image: url("src/assets/images/store2.jpg");
   background-size: cover;
   height: 50%;
   background-position: center;
   background-repeat: no-repeat;
 }
-
 .content {
-  //padding-top: 5%;
   width: auto;
-
   display: block;
 }
+//positioning of form center
 .form {
-  padding-top: 15%;
-}
-mat-card {
-  margin: auto;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   width: 40%;
 }
+//Inner Form CSS
 mat-form-field {
   width: 80%;
 }
