--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -1,3 +1,9 @@
+@media only screen and (max-width: 653px) {
+  .form {
+    width: 50% !important;
+  }
+}
+
 //center everything
 .wrapper {
   text-align: center;
