bg for search kind of sorted

--- a/src/app/shared/search-bar/search-bar.component.html
+++ b/src/app/shared/search-bar/search-bar.component.html
@@ -1,12 +1,20 @@
-<form class="example-form">
-    <mat-form-field appearance="none" class="search-bar">
-        <div style="text-align: center;  padding-top: 8px;">
-            <input placeholder="Postcode" matInput [formControl]="myControl" [matAutocomplete]="auto">
-        </div>
-        <mat-autocomplete #auto="matAutocomplete">
-            <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
-                {{option}}
-            </mat-option>
-        </mat-autocomplete>
-    </mat-form-field>
+<form class="search-form">
+  <mat-form-field appearance="none" class="search-bar">
+    <div style="text-align: center; padding-top: 8px;">
+      <input
+        placeholder="Postcode"
+        matInput
+        [formControl]="myControl"
+        [matAutocomplete]="auto"
+      />
+    </div>
+    <mat-autocomplete #auto="matAutocomplete">
+      <mat-option
+        *ngFor="let option of filteredOptions | async"
+        [value]="option"
+      >
+        {{ option }}
+      </mat-option>
+    </mat-autocomplete>
+  </mat-form-field>
 </form>
