--- a/src/app/components/landing-search/landing-search.component.html
+++ b/src/app/components/landing-search/landing-search.component.html
@@ -1,12 +1,9 @@
 <div class="wrapper">
-    <div calss="bg">
-        <div class="content">
-
-            <div class="search">
-
-                <app-search-bar></app-search-bar>
-
-            </div>
-        </div>
+  <div class="bg">
+    <div class="content">
+      <div class="search">
+        <app-search-bar></app-search-bar>
+      </div>
     </div>
+  </div>
 </div>
