--- a/src/app/components/landing-search/landing-search.component.scss
+++ b/src/app/components/landing-search/landing-search.component.scss
@@ -1,31 +1,22 @@
+.wrapper {
+  text-align: center;
+}
 
-
-.wrapper{
-    
-    text-align: center;
-    
-    background-image: url('src/assets/images/background-main.jpg');
-    background-size: cover;
-    height: 100%; 
+.bg {
+  background-image: url("src/assets/images/background-main.jpg");
+  background-size: cover;
+  height: 100%;
 
   /* Center and scale the image nicely */
   background-position: center;
   background-repeat: no-repeat;
-  
-    
-    
 }
 
-
-
-
-.search{
-   
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    width: 70%;
-   
+.search {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  width: 70%;
 }
